# blendx-sfguide-mktplace

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_FIXES.md  Makefile  README.md  deploy.sh  docker-compose.yml  lite_llm_handler.py  merge_qa.sh  migration_add_updated_at.sql  setup.sql  test_openai_format.py
backend/: .dockerignore  .env.example  Dockerfile  FASTAPI_ENDPOINTS.md  README.md  SERPER_INTEGRATION.md  alembic.ini  pyproject.toml  requirements.txt  test_available_models.py  test_env.py  test_llm_debug.py
backend/alembic/: README  env.py
backend/alembic/versions/: 20241222_000000_initial_schema.py  20251229_165659_a507c0033f7d_initial.py  20251229_190047_initial.py  20251230_add_external_access_configs.py  20251230_add_workflow_id_to_executions.py
backend/app/: main.py
backend/app/api/models/: crew_models.py  nl_ai_generator_async_models.py  nl_ai_generator_models.py  snowflake_models.py
backend/app/api/routers/: __init__.py  crew_router.py  ephemeral_router.py  executions_router.py  health_router.py  nl_ai_generator_async_router.py  nl_ai_generator_router.py
backend/app/api/utils/: yaml_validation.py
backend/app/config/: logging_config.py  settings.py
backend/app/crewai/engine/: README.md
backend/app/crewai/mcp/: README.md  (+1 more)
backend/app/database/: db.py
backend/app/examples/: example_crew.py  external_tool_crew.py
backend/app/handlers/: lite_llm_handler.py
backend/app/services/: crew_service.py  nl_ai_generator_service.py
backend/app/utils/: cache_utils.py  spcs_helper.py
backend/src/: app.py  example_crew.py  external_tool_crew.py  fastapi_app.py  lite_llm_handler.py  requirements.txt  settings.py  snowpark.py
backend/src/database/: db.py
backend/src/spcs_helpers/: __init__.py
backend/tests/: test_health.py
(+154 files in other folders)
