[project]
name = "blendx-backend"
version = "0.1.0"
description = "BlendX Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "snowflake-connector-python",
    "snowflake-snowpark-python",
    "pandas",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "litellm",
    "sqlalchemy",
    "snowflake-sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "crewai-tools>=0.0.1",
    "crewai>=0.28.0",
    "oscrypto @ git+https://github.com/wbond/oscrypto.git@d5f3437ed24257895ae1edd9e503cfb352e635a8",
    "gunicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]
